--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@
   --color-darkest: #a45c11;
 }
 
+.font-outline {
+  text-shadow: 
+    -0.5px -0.5px 0 black,  
+     0.5px -0.5px 0 black,
+    -0.5px  0.5px 0 black,
+     0.5px  0.5px 0 black;
+}
+
+
 /* resets */
 *::before,
 *::after {
@@ -40,5 +49,5 @@ body {
 }
 
 html, body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
