add: member photos

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,16 @@
      0.5px  0.5px 0 black;
 }
 
+@layer utilities {
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
 
 /* resets */
 *::before,
