--- a/src/index.css
+++ b/src/index.css
@@ -11,25 +11,26 @@
 
   /* color palette */
   --primary-white: #f5f7f8;
-  --secondary-white: #D9D9D9;
+  --secondary-white: #d9d9d9;
 
-  --primary-yellow: #FBC93D;
-  --secondary-yellow: #FFE31A;
+  --primary-yellow: #fbc93d;
+  --secondary-yellow: #ffe31a;
 
   --primary-green: #347928;
-  --secondary-green: #d2f4cb;
-  --tertiary-green: #99D58D;
-  --fourth-green: #0D4715;
+  --secondary-green: #c1f0a0;
+  --tertiary-green: #99d58d;
+  --fourth-green: #0d4715;
 
-  --primary-orange: #F09319;
-  --secondary-orange: #FFA725;
+  --primary-orange: #f09319;
+  --secondary-orange: #ffa725;
 
   --primary-black: #2c2c2c;
   --secondary-black: #222121;
   --tertiary-black: #303030;
 
-  --primary-gray: #9C9A9A;
+  --primary-gray: #9c9a9a;
 
+  --primary-red: #ff8383;
 }
 
 @layer utilities {
