edit: fourth green hex code

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   --primary-green: #347928;
   --secondary-green: #c1f0a0;
   --tertiary-green: #99d58d;
-  --fourth-green: #0d4715;
+  --fourth-green: #32cd32;
 
   --primary-orange: #f09319;
   --secondary-orange: #fbc93d;
