--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,11 @@ body {
 .ProseMirror:focus {
   outline: none;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
