--- a/src/modules/core/styles/customTable.css
+++ b/src/modules/core/styles/customTable.css
@@ -27,6 +27,11 @@ thead th {
   border-bottom: 1px solid #e5e7eb;
 }
 
+.dark thead th {
+  background-color: #1f2937;
+  border-bottom: 1px solid #374151;
+}
+
 th,
 td {
   padding: 0.8rem;
